--- a/services/core_api/Dockerfile
+++ b/services/core_api/Dockerfile
@@ -6,12 +6,12 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy application code and migrations
 COPY app/ ./app/
-COPY alembic.ini
+COPY alembic.ini .
 
 # Expose port
 EXPOSE 8000
 
 # Run application
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
