--- a/services/core_api/requirements.txt
+++ b/services/core_api/requirements.txt
@@ -6,6 +6,7 @@ python-multipart>=0.0.6,<0.1.0
 # Database
 sqlalchemy>=2.0.23,<3.0.0
 asyncpg>=0.29.0,<0.30.0
+psycopg2-binary>=2.9.9,<3.0.0
 alembic>=1.13.0,<2.0.0
 
 # Validation
