--- a/services/core_api/pyproject.toml
+++ b/services/core_api/pyproject.toml
@@ -18,6 +18,7 @@ pyjwt = "^2.8.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 python-dotenv = "^1.2.1"
+psycopg2-binary = "^2.9.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
