--- a/infra/helm/charts/recruiter-web/values.yaml
+++ b/infra/helm/charts/recruiter-web/values.yaml
@@ -1,5 +1,9 @@
 replicaCount: 1
 
+# Image override (optional, defaults to global.image.tag)
+image:
+  tag: ""
+
 resources:
   requests:
     cpu: 25m
