--- a/services/recruiter_web/Dockerfile
+++ b/services/recruiter_web/Dockerfile
@@ -3,6 +3,11 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Build arguments for environment variables
+ARG VITE_ENVIRONMENT=dev
+ARG VITE_ORY_SDK_URL=
+ARG VITE_API_URL=/api
+
 # Copy package files
 COPY package*.json ./
 
@@ -12,8 +17,11 @@ RUN npm ci || npm install
 # Copy source code
 COPY . .
 
-# Build application
-RUN npm run build
+# Build application with environment variables
+RUN VITE_ENVIRONMENT=$VITE_ENVIRONMENT \
+    VITE_ORY_SDK_URL=$VITE_ORY_SDK_URL \
+    VITE_API_URL=$VITE_API_URL \
+    npm run build
 
 # Production stage
 FROM nginx:alpine
@@ -33,4 +41,3 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 
 # Run nginx
 CMD ["nginx", "-g", "daemon off;"]
-
