--- a/services/recruiter_web/package.json
+++ b/services/recruiter_web/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@ory/client": "^1.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -26,4 +29,3 @@
     "vite": "^5.0.8"
   }
 }
-
