--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,6 +67,8 @@ jobs:
             context: services/hm_bot
           - service: worker
             context: services/worker
+          - service: candidate-landing
+            context: services/candidate_landing
     steps:
       - uses: actions/checkout@v4
 
@@ -96,44 +98,6 @@ jobs:
               --cache-from type=gha \
               --cache-to type=gha,mode=max \
               ${{ matrix.context }}
-
-  # ============ BUILD CANDIDATE LANDING ============
-  build-landing:
-    name: Build Landing
-    needs: lint
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GHCR
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 5
-          max_attempts: 3
-          retry_wait_seconds: 30
-          command: |
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
-
-      - name: Build and push
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_wait_seconds: 60
-          command: |
-            docker buildx build \
-              --push \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/candidate-landing:${{ github.sha }} \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/candidate-landing:latest \
-              --cache-from type=gha \
-              --cache-to type=gha,mode=max \
-              services/candidate_landing
 
   # ============ BUILD FRONTEND (DEV) ============
   build-frontend-dev:
@@ -220,7 +184,7 @@ jobs:
   # ============ DEPLOY DEV ============
   deploy-dev:
     name: Deploy DEV
-    needs: [build, build-frontend-dev, build-landing]
+    needs: [build, build-frontend-dev]
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -286,7 +250,7 @@ jobs:
   # ============ DEPLOY PROD ============
   deploy-prod:
     name: Deploy PROD
-    needs: [build, build-frontend-prod, build-landing]
+    needs: [build, build-frontend-prod]
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment: prod
