fix: correct webhook integration with tg servers

--- a/infra/helm/charts/app/values-dev.yaml
+++ b/infra/helm/charts/app/values-dev.yaml
@@ -42,6 +42,7 @@ candidate-bot:
   config:
     environment: dev
     logLevel: DEBUG
+    webhookBaseUrl: "https://dev.x5teamintern.ru"
   secrets:
     telegramBotToken: ""
     webhookSecret: ""
