--- a/infra/helm/charts/app/values-prod.yaml
+++ b/infra/helm/charts/app/values-prod.yaml
@@ -42,6 +42,7 @@ candidate-bot:
   config:
     environment: prod
     logLevel: INFO
+    webhookBaseUrl: "https://x5teamintern.ru"
   secrets:
     telegramBotToken: ""
     webhookSecret: ""
