--- a/infra/helm/charts/candidate-bot/values.yaml
+++ b/infra/helm/charts/candidate-bot/values.yaml
@@ -6,6 +6,7 @@ config:
   port: 8000
   apiBaseUrl: "http://core-api:8000"
   webhookPath: "/tg/candidate"
+  webhookBaseUrl: ""  # e.g., https://dev.x5teamintern.ru
 
 secrets:
   # Set via: --set candidate-bot.secrets.telegramBotToken=xxx
