--- a/infra/helm/charts/app/values-dev.yaml
+++ b/infra/helm/charts/app/values-dev.yaml
@@ -64,6 +64,7 @@ hm-bot:
   config:
     environment: dev
     logLevel: DEBUG
+    webhookBaseUrl: "https://dev.x5teamintern.ru"
   secrets:
     telegramBotToken: ""
     webhookSecret: ""
