--- a/infra/helm/charts/app/values-prod.yaml
+++ b/infra/helm/charts/app/values-prod.yaml
@@ -64,6 +64,7 @@ hm-bot:
   config:
     environment: prod
     logLevel: INFO
+    webhookBaseUrl: "https://x5teamintern.ru"
   secrets:
     telegramBotToken: ""
     webhookSecret: ""
