--- a/services/hm_bot/requirements.txt
+++ b/services/hm_bot/requirements.txt
@@ -1,5 +1,13 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+# Web framework
+fastapi>=0.109.0
+uvicorn>=0.27.0
 
+# Telegram bot
+aiogram>=3.4.0
+
+# HTTP client
+aiohttp>=3.9.0
+
+# Settings
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
